--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 		<version>2.5.5</version>
 	</dependency>
 	<dependency>
+   		<groupId>com.sparkjava</groupId>
+    	<artifactId>spark-template-velocity</artifactId>
+    	<version>2.5.5</version>
+	</dependency>
+	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-log4j12</artifactId>
 		<version>1.7.5</version>
