--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="D:/ArquiDeSoftware/PayrollGenerator/payroll-base-proyecto/src/mysql-connector-java-5.1.42-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
