--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0</version>
   <packaging>jar</packaging>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
   </properties>
 
   <dependencies>
@@ -37,6 +37,12 @@
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-log4j12</artifactId>
 		<version>1.7.5</version>
-   </dependency>
+   	</dependency>
+   	<dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.0</version>
+      <scope>compile</scope>
+    </dependency>   	
   </dependencies>
 </project>
